--- a/javafxLayout/src/Register.fxml
+++ b/javafxLayout/src/Register.fxml
@@ -2,7 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -17,14 +20,104 @@
                   <Font size="26.0" />
                </font>
                <VBox.margin>
-                  <Insets left="120.0" />
+                  <Insets bottom="5.0" left="120.0" />
                </VBox.margin>
             </Label>
-            <HBox prefHeight="100.0" prefWidth="200.0" />
-            <HBox layoutX="10.0" layoutY="48.0" prefHeight="100.0" prefWidth="200.0" />
-            <HBox layoutX="10.0" layoutY="148.0" prefHeight="100.0" prefWidth="200.0" />
-            <HBox layoutX="10.0" layoutY="248.0" prefHeight="100.0" prefWidth="200.0" />
-            <HBox layoutX="10.0" layoutY="348.0" prefHeight="100.0" prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="63.0" prefWidth="416.0">
+               <children>
+                  <Label alignment="CENTER" text="Name" textAlignment="CENTER" textFill="#db540a">
+                     <HBox.margin>
+                        <Insets right="30.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
+                  <TextField prefHeight="25.0" prefWidth="150.0">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="48.0" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label alignment="CENTER" prefHeight="19.0" prefWidth="86.0" text="EmailAddress" textAlignment="CENTER" textFill="#db540a">
+                     <HBox.margin>
+                        <Insets right="30.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
+                  <TextField prefHeight="25.0" prefWidth="192.0" promptText="example@one.com">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="148.0" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label alignment="CENTER" contentDisplay="CENTER" text="Password" textAlignment="CENTER" textFill="#db540a">
+                     <HBox.margin>
+                        <Insets right="30.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
+                  <PasswordField prefHeight="25.0" prefWidth="160.0">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </PasswordField>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="248.0" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label alignment="CENTER" text="Date of Birth" textAlignment="CENTER" textFill="#db540a">
+                     <HBox.margin>
+                        <Insets right="30.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
+                  <TextField prefHeight="25.0" prefWidth="169.0" promptText="mm-dd-YYYY">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="348.0" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="48.0" text="City" textAlignment="CENTER" textFill="#db540a">
+                     <HBox.margin>
+                        <Insets right="30.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
+                  <ComboBox prefHeight="25.0" prefWidth="150.0" promptText="Select City">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </ComboBox>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Button mnemonicParsing="false" style="-fx-background-color: #db540a;" text="Submit" textAlignment="CENTER" textFill="#0d0d0d">
